Fix the direction-rtl alignment in comment container

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -145,7 +145,12 @@
 }
 
 // Added by open-alt.com
+//------------------------------------
 .control-input {
+  direction: ltr;
+}
+
+.ql-container {
   direction: ltr;
 }
 
@@ -153,6 +158,11 @@
   padding-right: 0;
 }
 
+.ql-editor {
+  padding: 12px 20px;
+}
+
 .page-body {
   overflow-x: visible;
 }
+//------------------------------------
